# -

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  development_guide.md  resume.md
src/industrial_agent/: __init__.py  app_factory.py  cli.py  config.py
src/industrial_agent/agent/: orchestrator.py
src/industrial_agent/api/: main.py  schemas.py
src/industrial_agent/domain/: models.py  policy.py  tools.py
src/industrial_agent/infrastructure/: audit.py  repository.py
src/industrial_agent/llm/: base.py  openai_adapter.py  rule_based.py
src/industrial_agent/observability/: tracing.py
tests/: test_orchestrator.py  test_policy.py
