[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-ai-agent"
version = "0.1.0"
description = "Enterprise-grade AI Agent runtime with policy, tool governance, audit, and observability."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Z AI Agent" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
llm = [
  "openai>=1.40",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
industrial-agent = "industrial_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
